cleanup voting and include #109
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -313,7 +313,7 @@
         },
         "votes": {
             "about": "About",
-            "active": "Active(%(count)s)",
+            "active": "Active (%(count)s)",
             "active_short": "Active",
             "add_committee": "Add",
             "add_committee_label": "Committee Member",
@@ -336,13 +336,15 @@
             "hide_legacy_proposals": "Hide Legacy Proposals",
             "inactive": "Backup",
             "info": "Info",
+            "join_committee": "Join committee",
+            "join_witnesses": "Join Witnesses",
             "line": "Line",
             "max_pay": "Maximum total pay",
             "missing": "Needed",
             "name": "Name",
-            "new": "Proposed(%(count)s)",
+            "new": "Proposed (%(count)s)",
             "no_proxy": "No Proxy",
-            "polls": "Polls(%(count)s)",
+            "polls": "Polls (%(count)s)",
             "proxy": "Manually enter an account as your proxy",
             "proxy_current": "Your current proxy is",
             "proxy_known": "Or choose an account as your proxy",
@@ -355,6 +357,7 @@
             "save_finish": "Click save to finish",
             "set_proxy": "Set a proxy here",
             "start": "Start date",
+            "cast_votes_through_one_operation": "Cast your votes for witness, committee and workers and broadcast them together.",
             "status": {
                 "neutral": "Neutral",
                 "rejected": "Rejected",
@@ -1342,6 +1345,25 @@
         },
         "cancel": "cancel",
         "close": "close",
+        "committee": {
+            "confirm": "CONFIRM",
+            "create_committee": "Become a committee member",
+            "from": "From",
+            "text": "With enough BTS stakeholder votes committee can set policies for the BitShares Blochain including: <ul><li>Transaction and trading fees</li><li>Blockchain parametrs (Block size, interval etc.)</li><li>Referral and vesting parametrs (Cash back &#37, vesting period etc.)</li></ul> Simply submit a URL to your website or forum post explaning why yo would be a exemplary member to attract enough votes to become active.",
+            "url": "URL",
+            "web_example": "E.g. http://www.web-address.com"
+        },
+        "witness": {
+            "confirm": "CONFIRM",
+            "create_witness": "Become a witness member",
+            "witness_account": "Witness Account",
+            "invalid_key": "Public Key is invalid",
+            "text": "Witnesses text",
+            "url": "URL",
+            "web_example": "E.g. http://www.web-address.com",
+            "public_signing_key": "Public Signing Key",
+            "enter_public_signing_key": "Enter your public signing key"
+        },
         "confirmation": {
             "accept": "Yes",
             "cancel": "No",
@@ -2041,7 +2063,7 @@
         "propose_unhide": "Do not uncheck this unless you know what you are doing",
         "propose_unknown": "This proposal was created by or targets an unknown account (not in contacts or whitelist). Beware of scam attempts and carefully check the contained operations.",
         "proxy_remove": "You have a proxy set, to remove it simply clear this input field",
-        "proxy_search": "Search for an account to be used as your proxy for voting",
+        "proxy_search": "Search for an account to be used as your proxy for voting. Your account will act as if you would be voting exactly the same as your proxy.",
         "registration": {
             "accountModel": "The cloud wallet lets you login to your wallet from anywhere using only your account name and password, but your password is vulnerable to brute-force attacks which means it is important to use a very long password, ideally 20+ characters!",
             "accountName": "Account name must contain from 4 to 63 characters and must consist of latin letters, dashes, digits.",
@@ -2327,6 +2349,10 @@
             "url": "The field should be url",
             "urlNamed": "%(name)s should be url"
         }
+    },
+    "voting": {
+        "title": "Voting",
+        "description": "The BitShares blockchain allows the holders of its core token BTS to vote on block producers (witnesses), committee members (on-chain parameter governance), worker proposals (reimbursement for tasks and strategic decisions through BSIPs/Polls)."
     },
     "walkthrough": {
         "buy_form": "Place buy orders using this form.",
