--- a/app/assets/locales/locale-it.json
+++ b/app/assets/locales/locale-it.json
@@ -342,7 +342,7 @@
             "name": "Nome",
             "new": "Worker proposti",
             "no_proxy": "Nessun proxy",
-            "polls": "Polls(%(count)s)",
+            "polls": "Polls (%(count)s)",
             "proxy": "Inserisci manualmente un account come tuo proxy",
             "proxy_current": "Il tuo proxy attuale è",
             "proxy_known": "O scegli un account come tuo proxy",
@@ -2034,7 +2034,7 @@
         "propose_unhide": "Do not uncheck this unless you know what you are doing",
         "propose_unknown": "This proposal was created by or targets an unknown account (not in contacts or whitelist). Beware of scam attempts and carefully check the contained operations.",
         "proxy_remove": "You have a proxy set, to remove it simply clear this input field",
-        "proxy_search": "Search for an account to be used as your proxy for voting",
+        "proxy_search": "",
         "registration": {
             "accountModel": "The cloud wallet lets you login to your wallet from anywhere using only your account name and password, but your password is vulnerable to brute-force attacks which means it is important to use a very long password, ideally 20+ characters!",
             "accountName": "Account name must contain from 4 to 63 characters and must consist of latin letters, dashes, digits.",
