--- a/app/assets/locales/locale-ja.json
+++ b/app/assets/locales/locale-ja.json
@@ -313,7 +313,7 @@
         },
         "votes": {
             "about": "About",
-            "active": "Active(%(count)s)",
+            "active": "Active (%(count)s)",
             "active_short": "アクティブ",
             "add_committee": "追加",
             "add_committee_label": "委員",
@@ -340,9 +340,9 @@
             "max_pay": "最大総支払い額",
             "missing": "Needed",
             "name": "名前",
-            "new": "Proposed(%(count)s)",
+            "new": "Proposed (%(count)s)",
             "no_proxy": "代理人はいません",
-            "polls": "Polls(%(count)s)",
+            "polls": "Polls (%(count)s)",
             "proxy": "代理人にするアカウントを手動で入力",
             "proxy_current": "現在の代理人: ",
             "proxy_known": "または代理人アカウントを選択してください",
@@ -2034,7 +2034,7 @@
         "propose_unhide": "Do not uncheck this unless you know what you are doing",
         "propose_unknown": "This proposal was created by or targets an unknown account (not in contacts or whitelist). Beware of scam attempts and carefully check the contained operations.",
         "proxy_remove": "You have a proxy set, to remove it simply clear this input field",
-        "proxy_search": "Search for an account to be used as your proxy for voting",
+        "proxy_search": "",
         "registration": {
             "accountModel": "The cloud wallet lets you login to your wallet from anywhere using only your account name and password, but your password is vulnerable to brute-force attacks which means it is important to use a very long password, ideally 20+ characters!",
             "accountName": "Account name must contain from 4 to 63 characters and must consist of latin letters, dashes, digits.",
