--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -2223,7 +2223,8 @@
         "withdraw_permission_claim": "Claimed withdrawal permission for account",
         "withdraw_permission_create": "Gave withdrawal permission for account",
         "withdraw_permission_delete": "Deleted withdrawal permissions for account",
-        "withdraw_permission_update": "Updated withdrawal permission for account"
+        "withdraw_permission_update": "Updated withdrawal permission for account",
+        "view_json": "View raw TX"
     },
     "transfer": {
         "again": "MAKE ANOTHER TRANSFER",
