--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -342,7 +342,7 @@
             "name": "Имя",
             "new": "Предложено (%(count)s)",
             "no_proxy": "Без прокси",
-            "polls": "Polls (%(count)s)",
+            "polls": "BSIPs/Polls (%(count)s)",
             "proxy": "Вручную введите аккаунт в качестве своего прокси",
             "proxy_current": "Ваш текущий прокси",
             "proxy_known": "Или выберите аккаунт в качестве вашего прокси",
