- rename not found message - fix bug in send modal when proposing (from stays locked)
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1133,7 +1133,8 @@
         "help": "Help",
         "return_to_top": "Return to top",
         "scan_qr_code": "Scan QR code",
-        "set": "Set"
+        "set": "Set",
+        "not_found": "Not found"
     },
     "header": {
         "account": "Account",
