--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1349,18 +1349,18 @@
             "confirm": "CONFIRM",
             "create_committee": "Become a committee member",
             "from": "From",
-            "text": "With enough BTS stakeholder votes committee can set policies for the BitShares Blochain including: <ul><li>Transaction and trading fees</li><li>Blockchain parametrs (Block size, interval etc.)</li><li>Referral and vesting parametrs (Cash back &#37, vesting period etc.)</li></ul> Simply submit a URL to your website or forum post explaning why yo would be a exemplary member to attract enough votes to become active.",
+            "text": "After being voted in as active committee you can help set policies and parameters for the BitShares blockchain including: <ul><li>Transaction fees</li><li>Parameters of BitAssets (e.g. market fees)</li><li>Blockchain parameters (e.g. block size & interval)</li><li>Referral and vesting parameters (e.g. cash back percent for life-time-members and vesting period)</li><li>Other governance matters</li></ul> Submit a link to your website or forum post explaining why yo would be a exemplary member to attract enough votes to become active. Committee members should have basic technical understanding of BitShares and bring knowledge and expertise in key aspects of governing an autonomous and self-sustaining blockchain. This is an unpaid position.",
             "url": "URL",
-            "web_example": "E.g. http://www.web-address.com"
+            "web_example": "Enter link to your committee proposal post"
         },
         "witness": {
             "confirm": "CONFIRM",
             "create_witness": "Become a witness member",
             "witness_account": "Witness Account",
             "invalid_key": "Public Key is invalid",
-            "text": "Witnesses text",
+            "text": "After being voted in as an active witness you are added in the rotation of block producers and expected to produce blocks signed by your signing key and you are rewarded in BTS per produced block. Common criteria that help make your case are <ul><li>implementation of fallbacks (e.g. running a hot swap backup server) and appropriate server specifications to ensure a low number of missed blocks (e.g. high connectivity)</li><li>participation in block production and rolling releases of the testnet</li><li>provision of a public node for the community</li><li>publication of price feeds for the BitAssets</li></ul> Submit a link to your website or forum post explaining why you would be a exemplary member to attract enough votes to become active.",
             "url": "URL",
-            "web_example": "E.g. http://www.web-address.com",
+            "web_example": "Enter link to your witness proposal post",
             "public_signing_key": "Public Signing Key",
             "enter_public_signing_key": "Enter your public signing key"
         },
@@ -2062,7 +2062,7 @@
         "propose_tip": "Propose another user to initiate a transaction",
         "propose_unhide": "Do not uncheck this unless you know what you are doing",
         "propose_unknown": "This proposal was created by or targets an unknown account (not in contacts or whitelist). Beware of scam attempts and carefully check the contained operations.",
-        "proxy_remove": "You have a proxy set, to remove it simply clear this input field",
+        "proxy_remove": "You have a proxy set, to remove it clear this input field and click save or directly click remove proxy",
         "proxy_search": "Search for an account to be used as your proxy for voting. Your account will act as if you would be voting exactly the same as your proxy.",
         "registration": {
             "accountModel": "The cloud wallet lets you login to your wallet from anywhere using only your account name and password, but your password is vulnerable to brute-force attacks which means it is important to use a very long password, ideally 20+ characters!",
