--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -729,7 +729,6 @@
         },
         "asset": {
             "actions": "Asset actions",
-            "cumulative": "Cumulative",
             "collateral": {
                 "bid": "Bid Collateral",
                 "bid_price": "Bid price",
@@ -740,13 +739,14 @@
                 "bid": "Bid Price",
                 "collateral": "Additional Collateral",
                 "debt": "Debt Covered",
-                "title": "Collateral Bids",
                 "included": {
-                    "yes": "Yes",
                     "no": "No",
-                    "partial": "Partially"
-                }
+                    "partial": "Partially",
+                    "yes": "Yes"
+                },
+                "title": "Collateral Bids"
             },
+            "cumulative": "Cumulative",
             "fee_pool": {
                 "claim_balance": "Claim fee pool balance",
                 "claim_fees": "Claim fees",
@@ -765,10 +765,10 @@
             "info": "Asset info",
             "invalid": "The asset name %(name)s is invalid",
             "margin_positions": {
-                "title": "Margin positions",
-                "ratio_warning": "Position is near MCR and in danger of being margin called",
+                "click_to_switch_to_cumulative": "Click to switch to cumulative sum of the columns.",
                 "ratio_danger": "Position is below MCR and will be margin called",
-                "click_to_switch_to_cumulative": "Click to switch to cumulative sum of the columns."
+                "ratio_warning": "Position is near MCR and in danger of being margin called",
+                "title": "Margin positions"
             },
             "not_found": "The asset %(name)s does not exist",
             "permissions": {
@@ -922,10 +922,10 @@
             "children_authority_depth_warning": "This proposal may not get approved because a permission exceeds the maximum authority depth.",
             "failed": "Failed",
             "failed_execute": "Approved, failed to execute.",
+            "no_reason_available_switch_node": "Reason of failure is available with core release >=3.1.0, please switch your node.",
             "pending": "Pending",
             "pending_approval": "Pending approval.",
             "pending_review": "Approved, review time.",
-            "no_reason_available_switch_node": "Reason of failure is available with core release >=3.1.0, please switch your node.",
             "review": "Review",
             "title": "Proposed transactions"
         },
@@ -2515,8 +2515,8 @@
         "password_show": "Show me my password",
         "paste_private": "Paste private keys here (Wallet Import Format - WIF)",
         "pwd4brainkey": "Enter your password to show your brainkey",
-        "ready_to_restore": "Ready to Restore",
         "read_more": "Read more about %(wallet)s and %(backup)s.",
+        "ready_to_restore": "Ready to Restore",
         "reenter_brainkey": "Re-Enter Brainkey",
         "remember_me": "Remember me",
         "remember_me_explanation": "Turn 'Remember Me' off to disable remembering your account name and other personal settings.",
